[gd_scene load_steps=5 format=3 uid="uid://skb4loy48l2m"]

[ext_resource type="FontFile" uid="uid://brtp62oydrsyn" path="res://Fonts/veteran typewriter.ttf" id="1_8tgur"]
[ext_resource type="Script" uid="uid://c6xsxl0f2vd8e" path="res://Scenes/player_ui.gd" id="1_hfrq2"]
[ext_resource type="Texture2D" uid="uid://ddr11jpuud2e2" path="res://art/Sprites/battery_bar.png" id="2_qv4fw"]
[ext_resource type="Texture2D" uid="uid://bxyalmprwy2cc" path="res://art/Sprites/health_bar.png" id="3_kioar"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_hfrq2")
battery_bar_texture = ExtResource("2_qv4fw")
health_bar_texture = ExtResource("3_kioar")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FlashlightBattery" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 10

[node name="HealthBar" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 978.0
offset_top = 4.0
offset_right = 1018.0
offset_bottom = 44.0

[node name="PauseMenu" type="Panel" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 140.5
offset_top = 63.0
offset_right = 971.5
offset_bottom = 545.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="QuitGame" type="Button" parent="Control/PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -162.5
offset_top = 136.0
offset_right = 162.5
offset_bottom = 218.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_8tgur")
theme_override_font_sizes/font_size = 66
text = "QUIT GAME"

[node name="Label" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="Control/PauseMenu/QuitGame" to="." method="_on_quit_game_pressed"]
